--- a/ranking/ranking.html
+++ b/ranking/ranking.html
@@ -54,37 +54,37 @@
         <tbody>
             <tr>
                 <td class="const">1°</td>
-                <td><span class="Caterham">Caterham</span></td>
+                <td><span id="Caterham">Caterham</span></td>
                 <td class="const">13</td>
             </tr>
             <tr>
                 <td class="const">2°</td>
-                <td><span class="McLaren">McLaren</span></td>
+                <td><span id="McLaren">McLaren</span></td>
                 <td class="const">7</td>
             </tr>
             <tr>
                 <td class="const">3°</td>
-                <td><span class="Ferrari">Ferrari</span></td>
+                <td><span id="Ferrari">Ferrari</span></td>
                 <td class="const">6</td>
             </tr>
             <tr>
                 <td class="const">4°</td>
-                <td><span class="Lotus">Lotus</span></td>
+                <td><span id="Lotus">Lotus</span></td>
                 <td class="const">2</td>
             </tr>
             <tr>
                 <td class="const">5°</td>
-                <td><span class="ToroRosso">Toro Rosso</span></td>
+                <td><span id="ToroRosso">Toro Rosso</span></td>
                 <td class="const">1</td>
             </tr>
             <tr>
                 <td class="const">6°</td>
-                <td><span class="Williams">Williams</span></td>
+                <td><span id="Williams">Williams</span></td>
                 <td class="const">1</td>
             </tr>
             <tr>
                 <td class="const">7°</td>
-                <td><span class="Satsu">Satsu</span></td>
+                <td><span id="Satsu">Satsu</span></td>
                 <td class="const">1</td>
             </tr>
         </tbody>
