--- a/results/results.html
+++ b/results/results.html
@@ -168,7 +168,19 @@
                 <td class="p2"><img src="../img/Gunner.png" alt="">Gunner <span class="Caterham">Caterham</span> <span>88pts</span></td>
                 <td class="p3"><img src="../img/Nekomori.png" alt="">Nekomori <span class="Caterham">Caterham</span> <span>73pts</span></td>
                 </tr>
-                
+                <tr>
+                    <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/1071831730966757456/image.png?width=1189&height=669" target="_blank">32ª edição</a></td>
+                    <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori <span class="Caterham">Caterham</span> <span>91pts</span></td>
+                    <td class="p2"><img src="../img/Sliink.png" alt="">Sliink <span class="Lotus">Lotus</span> <span>81pts</span></td>
+                    <td class="p3"><img src="../img/Gunner.png" alt="">Gunner <span class="McLaren">McLaren</span> <span>60pts</span></td>
+                    </tr>
+                    <tr>
+                    <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/1071841054778724402/image.png?width=1189&height=669" target="_blank">33ª edição</a></td>
+                    <td class="p1"><img src="../img/Sliink.png" alt="">Sliink <span class="Ferrari">Ferrari</span> <span>103pts</span></td>
+                    <td class="p2"><img src="../img/Gunner.png" alt="">Gunner <span class="RedBull">Red Bull</span> <span>94pts</span></td>
+                    <td class="p3"><img src="../img/Bot.png" alt="">Bot <span class="Williams">Williams</span> <span>69pts</span></td>
+                    </tr>
+        
             </tbody>
     </table>
     <div id="voltar">
