--- a/results/results.html
+++ b/results/results.html
@@ -39,7 +39,7 @@
             <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/960303268368633946/unknown.png?width=1157&height=669" target="_blank">4ª edição</a></td>
             <td class="p1"><img src="../img/Nekomori.png" alt="">Nekomori <span class="Caterham">Caterham</span> <span>43pts</span></td>
             <td class="p2"><img src="../img/bot.png" alt="">Bot <span class="RedBull">Red Bull</span> <span>43pts</span></td>
-            <td class="p3"><img src="../img/bot.png" alt="">Bot <span class="McLaren">McLaren</span>an>40pts</span></td>
+            <td class="p3"><img src="../img/bot.png" alt="">Bot <span class="McLaren">McLaren</span>40pts</span></td>
 
             </tr><tr>
             <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/960712081571737610/unknown.png?width=1189&height=669" target="_blank">5ª edição</a></td>
