--- a/pontuacao/pontuacao.html
+++ b/pontuacao/pontuacao.html
@@ -10,7 +10,7 @@
 <body>
     <h1><a href="../index.html"><img src="../img/logom.png" alt=""></a></h1>
     <h2>Pontuação</h2>
-    <table id="pontos">
+    <table class="tablepts">
         <thead>
             <tr>
                 <th>Pos</th>
@@ -21,18 +21,18 @@
         <tbody>
             <tr>
                 <td>1°</td>
-                <td class="name"><img src="../img/Sliink.png" alt="">Sliink</td>
-                <td class="pts">2034</td>
+                <td class="namepont"><img src="../img/Sliink.png" alt="">Sliink</td>
+                <td class="ptspont">2034</td>
             </tr>
             <tr>
                 <td>2°</td>
-                <td class="name"><img src="../img/Gunner.png" alt="">Gunner</td>
-                <td class="pts">1988</td>
+                <td class="namepont"><img src="../img/Gunner.png" alt="">Gunner</td>
+                <td class="ptspont">1988</td>
             </tr>
             <tr>
                 <td>3°</td>
-                <td class="name"><img src="../img/Nekomori.png" alt="">Nekomori</td>
-                <td class="pts">1854</td>
+                <td class="namepont"><img src="../img/Nekomori.png" alt="">Nekomori</td>
+                <td class="ptspont">1854</td>
             </tr>
             </tbody>
     </table>
