--- a/index.html
+++ b/index.html
@@ -248,9 +248,9 @@
             </tr>
             <tr>
             <td class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/1073389776968888401/image.png?width=1189&height=669" target="_blank">36ª edição</a></td>
-            <td class="p1"><img src="img/Gunner.png" alt="">Gunner <span class="carp1 McLaren">McLaren</span> <span class="gunnerpt">70pts</span></td>
-            <td class="p2"><img src="img/Sliink.png" alt="">Sliink <span class="carp2 McLaren">McLaren</span> <span class="sliinkpt">63pts</span></td>
-            <td class="p3"><img src="img/Nekomori.png" alt="">Nekomori <span class="carp3 Caterham">Caterham</span> <span class="nekomoript">58pts</span></td>
+            <td class="p1"><img src="img/Gunner.png" alt="">Gunner <span class="carp1 McLaren">McLaren</span> <span class="gunnerpt spanpts">70pts</span></td>
+            <td class="p2"><img src="img/Sliink.png" alt="">Sliink <span class="carp2 McLaren">McLaren</span> <span class="sliinkpt spanpts">63pts</span></td>
+            <td class="p3"><img src="img/Nekomori.png" alt="">Nekomori <span class="carp3 Caterham">Caterham</span> <span class="nekomoript spanpts">58pts</span></td>
             </tr>
                 </tbody>
         </div>
