--- a/index.html
+++ b/index.html
@@ -280,6 +280,14 @@
                 <td class="hidden1"><img src="img/.png" alt=""> <span class=" "></span> <span class="pt spanpts">pts</span></td>
                 <td class="hidden2"><img src="img/.png" alt=""> <span class=" "></span> <span class="pt spanpts">pts</span></td>
                 </tr>
+                <tr>
+                    <th scope="row" class="edition"><a href="https://media.discordapp.net/attachments/960263390222229545/1075927885749166142/image.png?width=1189&height=669" target="_blank">40ª edição</a></th>
+                    <td class="p1"><img src="img/Gunner.png" alt="">Gunner <span class="carp1 RedBull">Red Bull</span> <span class="gunnerpt spanpts">123pts</span></td>
+                    <td class="p2"><img src="img/Nekomori.png" alt="">Nekomori <span class="carp2 Caterham">Caterham</span> <span class="nekomoript spanpts">83pts</span></td>
+                    <td class="p3"><img src="img/Sliink.png" alt="">Sliink <span class="carp3 Ferrari">Ferrari</span> <span class="sliinkpt spanpts">70pts</span></td>
+                    <td class="hidden1"><img src="img/.png" alt=""> <span class=" "></span> <span class="pt spanpts">pts</span></td>
+                    <td class="hidden2"><img src="img/.png" alt=""> <span class=" "></span> <span class="pt spanpts">pts</span></td>
+                    </tr>
         
             </tbody>
         </div>
