--- a/index.html
+++ b/index.html
@@ -19,6 +19,12 @@
         <div id="hiddenres">
             <h2>Edições</h2>
             <table id="maintable">
+                <colgroup>
+                <col class="coledi">
+                <col class="colp1">
+                <col class="colp2">
+                <col class="colp3">
+                </colgroup>
             <thead>
                 <tr>
                     <th scope="colgroup">Edição</th>
